add code for function

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body id="body">
     <ul>
-        <li id="red" onclick="red2()">red</li>
-        <li id="blue" onclick="blue2()">blue</li>
-        <li id="green" onclick="green2()">green</li>
-        <li id="yellow" onclick="yellow2()">yellow</li>
-        <li id="black" onclick="black2()">black</li>
+        <li onclick="changeColor('red')">Red</li>
+        <li onclick="changeColor('blue')">Blue</li>
+        <li onclick="changeColor('green')">Green</li>
+        <li onclick="changeColor('yellow')">Yellow</li>
+        <li onclick="changeColor('black')">Black</li>
     </ul>
     <script src="./src/js/script.js"></script>
 </body>
